custom_metrics/citrix-k8s-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "`CIC_IMAGE`"
        args:
          - --ingress-classes
            cic-vpx
          - --feature-node-watch
            false
        imagePullPolicy: Always
