custom_metrics/citrix-k8s-cpx-ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
    app: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations: null
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: "`CPX_IMAGE`" 
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
        # Add cic as a sidecar
        - name: cic
          image: "`CIC_IMAGE`"
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
          - --ingress-classes
            builtin-hostport
          - --default-ssl-certificate
            default/default-secret
          imagePullPolicy: Always
        - name: exporter
          image: "`EXPORTER`"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data

      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume1
        emptyDir: {}
      - name: cpx-volume2
        emptyDir: {}
        
---

apiVersion: v1
kind: Service
metadata:
  name: cpx-service
  labels:
    app: cpx-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  - name: port-1
    port: 9080
    targetPort: 9080
  - name: port-2
    port: 9443
  - name: port-3
    port: 8888
  - name: port-4
    port: 6080
  - name: port-5
    port: 6443
  selector:
    app: cpx-ingress
